--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/UnityChan-Adventure-WebGL-Build.loader.js";
+      var loaderUrl = buildUrl + "/Unity-Chan-Adventure.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityChan-Adventure-WebGL-Build.data.br",
-        frameworkUrl: buildUrl + "/UnityChan-Adventure-WebGL-Build.framework.js.br",
-        codeUrl: buildUrl + "/UnityChan-Adventure-WebGL-Build.wasm.br",
+        dataUrl: buildUrl + "/Unity-Chan-Adventure.data.br",
+        frameworkUrl: buildUrl + "/Unity-Chan-Adventure.framework.js.br",
+        codeUrl: buildUrl + "/Unity-Chan-Adventure.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UnityChan Adventure",
