--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         frameworkUrl: buildUrl + "/Unity-Chan-Adventure.framework.js.unityweb",
         codeUrl: buildUrl + "/Unity-Chan-Adventure.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "LeeCompany",
         productName: "UnityChan Adventure",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
